--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="header" id="home">
     <div class="container">
       <nav class="header-navigation" aria-label="navigation">
-        <div class="logo"><span class="yellow">Flex</span>Fit</div>
+        <div class="logo"><span class="yellow">POPO</span>Fit</div>
 
         <img src="img/nav-icon.svg" alt="navigation icon" class="nav-icon" width="30" height="30" />
 
